// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildEdition > reproduces the edge-case HTML 1`] = `
"<!doctype html>
<html lang="pt-BR">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>Crédito de R$ 20 bi para pequenas empresas e SELIC em queda: o que muda para v</title>
<!--[if !mso]><!--><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"><!--<![endif]-->
<!--[if mso]><style>table, td, p, h2, a { font-family: Arial, Helvetica, sans-serif !important; }</style><![endif]-->
<style>
  @media only screen and (max-width: 620px) {
    .container { width: 100% !important; }
    .pad { padding-left: 20px !important; padding-right: 20px !important; }
  }
  @media (prefers-color-scheme: dark) {
    .dark-bg { background-color: #0f0f10 !important; }
    .dark-card { background-color: #1f1f21 !important; border-color: #333333 !important; }
    .dark-text { color: #f2f2f2 !important; }
    .dark-muted { color: #c8c8c8 !important; }
  }
  /* Outlook (app and web) uses data-ogsc/data-ogsb instead of the media query. */
  [data-ogsb] .dark-bg { background-color: #0f0f10 !important; }
  [data-ogsb] .dark-card { background-color: #1f1f21 !important; border-color: #333333 !important; }
  [data-ogsc] .dark-text { color: #f2f2f2 !important; }
  [data-ogsc] .dark-muted { color: #c8c8c8 !important; }
</style>
</head>
<body class="dark-bg" style="margin:0;padding:0;background-color:#f4f4f5;">
<div style="display:none;max-height:0;overflow:hidden;mso-hide:all;">Crédito para pequenas, SELIC em queda e mais quatro notícias que importam para q&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;</div>
<table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" class="dark-bg" style="background-color:#f4f4f5;">
<tr><td align="center" style="padding:24px 12px;">
<!--[if mso]><table role="presentation" width="600" cellspacing="0" cellpadding="0" border="0" align="center"><tr><td><![endif]-->
<table role="presentation" width="600" cellspacing="0" cellpadding="0" border="0" class="container" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e0e0e0;">

<tr><td class="pad" style="padding:24px 40px;background-color:#1a1a1a;">
  <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0"><tr>
    <td style="vertical-align:middle;">
      <table role="presentation" cellspacing="0" cellpadding="0" border="0"><tr>
        <td style="width:36px;height:36px;border-radius:4px;background-color:#d9d9d9;font-size:0;line-height:0;">&nbsp;</td>
        <td style="padding-left:10px;vertical-align:middle;">
          <p style="margin:0 0 2px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:20px;line-height:24px;font-weight:700;letter-spacing:1px;text-transform:uppercase;color:#ffffff;">Argon</p>
          <p style="margin:0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:9px;line-height:11px;font-weight:700;letter-spacing:2px;text-transform:uppercase;color:#aaaaaa;">Business newsletter</p>
        </td>
      </tr></table>
    </td>
    <td align="right" style="vertical-align:middle;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#aaaaaa;">Edição de hoje &middot; Sexta-feira, 11 set 2026</td>
  </tr></table>
</td></tr>

<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Mercado de Trabalho e Carreira</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Governo anuncia pacote de crédito para pequenas empresas com juros abaixo da SELIC e prazo de dez anos para pagar, diz m</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Medida provisória publicada hoje libera R$ 20 bilhões via BNDES para empresas com faturamento de até R$ 4,8 milhões por ano; bancos começam a operar as linhas na próxima semana, com carência</p>
  <a href="https://example.com/noticias/credito-pequenas-empresas" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Economia</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">SELIC cai</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Copom reduz a taxa para 10,5% ao ano.</p>
  <a href="https://example.com/noticias/selic" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Inteligência Artificial</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">IA generativa já responde por 40% das buscas na internet, diz novo relatório</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Estudo da consultoria Gartner mostra aceleração do uso de IA em ferramentas de busca e impacto direto no tráfego orgânico.</p>
  <a href="https://example.com/noticias/ia-buscas-internet" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Mercado de Trabalho</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Salários de profissionais de dados crescem 28% em 12 meses no Brasil</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Levantamento do LinkedIn aponta alta demanda por engenheiros e analistas de dados com experiência em Python e SQL.</p>
  <a href="https://example.com/noticias/salarios-dados-brasil" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Carreira</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Como líderes da Fortune 500 estruturam suas rotinas de aprendizado contínuo</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Entrevistas com 12 executivos revelam hábitos comuns: leitura diária, podcasts e blocos de tempo protegido para estudo.</p>
  <a href="https://example.com/noticias/lideres-aprendizado" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Tecnologia</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Microsoft anuncia integração total do Copilot ao pacote Office em outubro</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Recurso estará disponível para todos os assinantes do Microsoft 365 sem custo adicional, prometendo automatizar tarefas repetitivas.</p>
  <a href="https://example.com/noticias/microsoft-copilot-office" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>

<tr><td class="pad dark-card" style="padding:28px 40px;border-bottom:1px solid #e0e0e0;">
  <p class="dark-muted" style="margin:0 0 6px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:14px;line-height:17px;color:#444444;">Até a próxima e um grande abraço,</p>
  <p class="dark-text" style="margin:0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:15px;line-height:18px;font-weight:700;color:#1a1a1a;">Time Argon</p>
</td></tr>

<tr><td class="pad" align="center" style="padding:28px 40px;background-color:#1a1a1a;">
  <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="margin:0 auto 16px auto;"><tr>
      <td style="padding:0 12px;">
        <a href="https://argon.com.br" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/logo.png" width="20" height="20" alt="Site da Argon" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
      <td style="padding:0 12px;">
        <a href="https://www.linkedin.com/company/argon" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/linkedin.png" width="20" height="20" alt="LinkedIn" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
      <td style="padding:0 12px;">
        <a href="https://www.instagram.com/argon" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/instagram.png" width="20" height="20" alt="Instagram" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
      <td style="padding:0 12px;">
        <a href="https://www.youtube.com/@argon" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/youtube.png" width="20" height="20" alt="YouTube" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
  </tr></table>
  <p style="margin:0 0 16px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:14px;line-height:17px;font-weight:700;letter-spacing:2px;text-transform:uppercase;color:#ffffff;">Argon &nbsp;&middot; Business newsletter</p>
  <p style="margin:0 0 16px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:11px;line-height:13px;color:#888888;">Você está recebendo este e-mail porque se inscreveu na Argon Business Newsletter.</p>
  <p style="margin:0 0 16px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:11px;line-height:13px;color:#888888;">Argon &lt;newsletter@argon.com.br&gt; &middot; Porto Alegre, RS, Brasil</p>
  <p style="margin:0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:11px;line-height:13px;color:#888888;"><a href="https://argon.com.br/newsletter/unsubscribe?token=fixture" style="color:#2563eb;text-decoration:none;">Cancele a assinatura aqui</a> &middot; <a href="https://argon.com.br/privacy" style="color:#2563eb;text-decoration:none;">Política de privacidade</a></p>
</td></tr>
</table>
<!--[if mso]></td></tr></table><![endif]-->
</td></tr>
</table>
</body>
</html>"
`;

exports[`buildEdition > reproduces the fixture HTML 1`] = `
"<!doctype html>
<html lang="pt-BR">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>IA já responde por 40% das buscas na internet</title>
<!--[if !mso]><!--><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"><!--<![endif]-->
<!--[if mso]><style>table, td, p, h2, a { font-family: Arial, Helvetica, sans-serif !important; }</style><![endif]-->
<style>
  @media only screen and (max-width: 620px) {
    .container { width: 100% !important; }
    .pad { padding-left: 20px !important; padding-right: 20px !important; }
  }
  @media (prefers-color-scheme: dark) {
    .dark-bg { background-color: #0f0f10 !important; }
    .dark-card { background-color: #1f1f21 !important; border-color: #333333 !important; }
    .dark-text { color: #f2f2f2 !important; }
    .dark-muted { color: #c8c8c8 !important; }
  }
  /* Outlook (app and web) uses data-ogsc/data-ogsb instead of the media query. */
  [data-ogsb] .dark-bg { background-color: #0f0f10 !important; }
  [data-ogsb] .dark-card { background-color: #1f1f21 !important; border-color: #333333 !important; }
  [data-ogsc] .dark-text { color: #f2f2f2 !important; }
  [data-ogsc] .dark-muted { color: #c8c8c8 !important; }
</style>
</head>
<body class="dark-bg" style="margin:0;padding:0;background-color:#f4f4f5;">
<div style="display:none;max-height:0;overflow:hidden;mso-hide:all;">IA nas buscas, salários de dados e captação de startups&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;</div>
<table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" class="dark-bg" style="background-color:#f4f4f5;">
<tr><td align="center" style="padding:24px 12px;">
<!--[if mso]><table role="presentation" width="600" cellspacing="0" cellpadding="0" border="0" align="center"><tr><td><![endif]-->
<table role="presentation" width="600" cellspacing="0" cellpadding="0" border="0" class="container" style="width:600px;max-width:600px;background-color:#ffffff;border:1px solid #e0e0e0;">

<tr><td class="pad" style="padding:24px 40px;background-color:#1a1a1a;">
  <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0"><tr>
    <td style="vertical-align:middle;">
      <table role="presentation" cellspacing="0" cellpadding="0" border="0"><tr>
        <td style="width:36px;height:36px;border-radius:4px;background-color:#d9d9d9;font-size:0;line-height:0;">&nbsp;</td>
        <td style="padding-left:10px;vertical-align:middle;">
          <p style="margin:0 0 2px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:20px;line-height:24px;font-weight:700;letter-spacing:1px;text-transform:uppercase;color:#ffffff;">Argon</p>
          <p style="margin:0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:9px;line-height:11px;font-weight:700;letter-spacing:2px;text-transform:uppercase;color:#aaaaaa;">Business newsletter</p>
        </td>
      </tr></table>
    </td>
    <td align="right" style="vertical-align:middle;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#aaaaaa;">Edição de hoje &middot; Sexta-feira, 11 set 2026</td>
  </tr></table>
</td></tr>

<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Inteligência Artificial</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">IA generativa já responde por 40% das buscas na internet, diz novo relatório</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Estudo da consultoria Gartner mostra aceleração do uso de IA em ferramentas de busca e impacto direto no tráfego orgânico.</p>
  <a href="https://example.com/noticias/ia-buscas-internet" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Mercado de Trabalho</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Salários de profissionais de dados crescem 28% em 12 meses no Brasil</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Levantamento do LinkedIn aponta alta demanda por engenheiros e analistas de dados com experiência em Python e SQL.</p>
  <a href="https://example.com/noticias/salarios-dados-brasil" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Carreira</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Como líderes da Fortune 500 estruturam suas rotinas de aprendizado contínuo</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Entrevistas com 12 executivos revelam hábitos comuns: leitura diária, podcasts e blocos de tempo protegido para estudo.</p>
  <a href="https://example.com/noticias/lideres-aprendizado" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Tecnologia</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Microsoft anuncia integração total do Copilot ao pacote Office em outubro</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Recurso estará disponível para todos os assinantes do Microsoft 365 sem custo adicional, prometendo automatizar tarefas repetitivas.</p>
  <a href="https://example.com/noticias/microsoft-copilot-office" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>
<tr><td class="pad dark-card" style="padding:28px 40px 24px 40px;border-bottom:1px solid #e0e0e0;">
  <p style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:10px;line-height:12px;font-weight:600;letter-spacing:1px;text-transform:uppercase;color:#888888;">Empreendedorismo</p>
  <h2 class="dark-text" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:18px;line-height:22px;font-weight:700;color:#1a1a1a;">Startups brasileiras captaram R$ 3,2 bi no primeiro semestre, alta de 18%</h2>
  <p class="dark-muted" style="margin:0 0 8px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:13px;line-height:16px;color:#555555;">Fintechs e healthtechs lideram as rodadas, com investidores regionais ganhando protagonismo frente aos fundos internacionais.</p>
  <a href="https://example.com/noticias/startups-captacao-brasil" style="font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:12px;line-height:15px;color:#2563eb;text-decoration:none;">Ler matéria completa &rarr;</a>
</td></tr>

<tr><td class="pad dark-card" style="padding:28px 40px;border-bottom:1px solid #e0e0e0;">
  <p class="dark-muted" style="margin:0 0 6px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:14px;line-height:17px;color:#444444;">Até a próxima e um grande abraço,</p>
  <p class="dark-text" style="margin:0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:15px;line-height:18px;font-weight:700;color:#1a1a1a;">Time Argon</p>
</td></tr>

<tr><td class="pad" align="center" style="padding:28px 40px;background-color:#1a1a1a;">
  <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="margin:0 auto 16px auto;"><tr>
      <td style="padding:0 12px;">
        <a href="https://argon.com.br" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/logo.png" width="20" height="20" alt="Site da Argon" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
      <td style="padding:0 12px;">
        <a href="https://www.linkedin.com/company/argon" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/linkedin.png" width="20" height="20" alt="LinkedIn" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
      <td style="padding:0 12px;">
        <a href="https://www.instagram.com/argon" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/instagram.png" width="20" height="20" alt="Instagram" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
      <td style="padding:0 12px;">
        <a href="https://www.youtube.com/@argon" style="display:block;line-height:0;">
          <img src="https://argon.com.br/email/youtube.png" width="20" height="20" alt="YouTube" style="display:block;width:20px;height:20px;border:0;">
        </a>
      </td>
  </tr></table>
  <p style="margin:0 0 16px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:14px;line-height:17px;font-weight:700;letter-spacing:2px;text-transform:uppercase;color:#ffffff;">Argon &nbsp;&middot; Business newsletter</p>
  <p style="margin:0 0 16px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:11px;line-height:13px;color:#888888;">Você está recebendo este e-mail porque se inscreveu na Argon Business Newsletter.</p>
  <p style="margin:0 0 16px 0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:11px;line-height:13px;color:#888888;">Argon &lt;newsletter@argon.com.br&gt; &middot; Porto Alegre, RS, Brasil</p>
  <p style="margin:0;font-family:Inter, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;font-size:11px;line-height:13px;color:#888888;"><a href="https://argon.com.br/newsletter/unsubscribe?token=fixture" style="color:#2563eb;text-decoration:none;">Cancele a assinatura aqui</a> &middot; <a href="https://argon.com.br/privacy" style="color:#2563eb;text-decoration:none;">Política de privacidade</a></p>
</td></tr>
</table>
<!--[if mso]></td></tr></table><![endif]-->
</td></tr>
</table>
</body>
</html>"
`;

exports[`buildEdition > reproduces the fixture plain text 1`] = `
"ARGON · BUSINESS NEWSLETTER
Edição de hoje · Sexta-feira, 11 set 2026

IA nas buscas, salários de dados e captação de startups

INTELIGÊNCIA ARTIFICIAL
IA generativa já responde por 40% das buscas na internet, diz novo relatório
Estudo da consultoria Gartner mostra aceleração do uso de IA em ferramentas de
busca e impacto direto no tráfego orgânico.
Ler matéria completa: https://example.com/noticias/ia-buscas-internet

MERCADO DE TRABALHO
Salários de profissionais de dados crescem 28% em 12 meses no Brasil
Levantamento do LinkedIn aponta alta demanda por engenheiros e analistas de
dados com experiência em Python e SQL.
Ler matéria completa: https://example.com/noticias/salarios-dados-brasil

CARREIRA
Como líderes da Fortune 500 estruturam suas rotinas de aprendizado contínuo
Entrevistas com 12 executivos revelam hábitos comuns: leitura diária, podcasts
e blocos de tempo protegido para estudo.
Ler matéria completa: https://example.com/noticias/lideres-aprendizado

TECNOLOGIA
Microsoft anuncia integração total do Copilot ao pacote Office em outubro
Recurso estará disponível para todos os assinantes do Microsoft 365 sem custo
adicional, prometendo automatizar tarefas repetitivas.
Ler matéria completa: https://example.com/noticias/microsoft-copilot-office

EMPREENDEDORISMO
Startups brasileiras captaram R$ 3,2 bi no primeiro semestre, alta de 18%
Fintechs e healthtechs lideram as rodadas, com investidores regionais ganhando
protagonismo frente aos fundos internacionais.
Ler matéria completa: https://example.com/noticias/startups-captacao-brasil

Até a próxima e um grande abraço,
Time Argon

Você está recebendo este e-mail porque se inscreveu na Argon Business
Newsletter.
Argon <newsletter@argon.com.br> · Porto Alegre, RS, Brasil
Cancele a assinatura: https://argon.com.br/newsletter/unsubscribe?token=fixture
Política de privacidade: https://argon.com.br/privacy
"
`;
